--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">NetologyVoiceAssistant</string>
+    <string name="app_name">NetVoice</string>
+    <string name="description_voice_button">Voice button</string>
+    <string name="action_stop_title">Stop</string>
+    <string name="action_clear_title">Clear</string>
+    <string name="request_hint">Interested in?</string>
+    <string name="error_do_not_understand">I don\'t understand, could you rephrase?</string>
+    <string name="error_voice_recognition_unavailable">Voice recognition unavailable</string>
+    <string name="error_something_went_wrong">Something went wrong</string>
+    <string name="error_tts_is_not_ready">TTS is not ready</string>
 </resources>
